# RAMSES2

./: pyproject.toml  readme.md  setup.py
checkpoints/2048x3072/: classes.json  config.json
datasets/: 15CLS_20250723-173206.json  15CLS_20250723-173206_MASS_ONLY.json
notebooks/: dataset.ipynb  training.ipynb
ramses2/: __init__.py
ramses2/GUI/: classes.json  gui.py  gui_utils.py
ramses2/backbones/: __init__.py  build_backbone.py  convnext.py  resnet.py
ramses2/core/: __init__.py  blocks.py  norm.py  ops.py
ramses2/inference/: __init__.py  eval.py  predict.py
ramses2/model/: __init__.py  config.py  fpn.py  model.py
ramses2/train/: __init__.py  dataset.py  lightning_model.py  loss.py  metrics.py  schedulers.py
ramses2/utils/: __init__.py  transforms.py  utils.py  visualization.py
scripts/: COCO_base.json  compute_masses.py  convert_to_COCO.py  from_COCO.py
