[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ramses2"
version = "1.0"
description = "Recycled Aggregates Mass Estimation and Segmentation (RAMSES) — SOLOv2-based instance segmentation with mass estimation"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jerome Lux", email = "jerome.lux@example.com"}
]
keywords = ["instance-segmentation", "mass-estimation", "recycled-aggregates", "computer-vision", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "Pillow>=9.0.0",
    "scikit-image>=0.19.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "pytorch-lightning>=1.6.0",
    "tensorboard>=2.8.0",
    "tqdm>=4.62.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.5b0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.6.0",
    "ipykernel>=6.0.0",
]
gui = [
    "PyQt5>=5.15.0",
]
coco = [
    "pycocotools>=2.0.2",
]

[project.urls]
Homepage = "https://github.com/jerome-lux/RAMSES2"
Repository = "https://github.com/jerome-lux/RAMSES2.git"
Documentation = "https://github.com/jerome-lux/RAMSES2"
"Bug Tracker" = "https://github.com/jerome-lux/RAMSES2/issues"

[tool.setuptools]
packages = ["ramses2"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py3.12"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ramses2 --cov-report=html"

[tool.coverage.run]
source = ["ramses2"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]